--- a/try.html
+++ b/try.html
@@ -427,11 +427,11 @@
         /* Mobile Dropdown Mechanism */
         @media (max-width: 768px) {
             .dropdown-content, .project-dropdown-content {
-                position: static;
+                position: absolute;
                 display: none;
                 box-shadow: none;
                 padding: 15px 0;
-                background-color: transparent;
+                background-color: var(--dropdown-bg-6);
             }
 
             .dropdown:active .dropdown-content,
