--- a/try.html
+++ b/try.html
@@ -427,7 +427,7 @@
         /* Mobile Dropdown Mechanism */
         @media (max-width: 768px) {
             .dropdown-content, .project-dropdown-content {
-                position: absolute;
+                position: static;
                 display: none;
                 box-shadow: none;
                 padding: 15px 0;
