--- a/portfolio.html
+++ b/portfolio.html
@@ -571,10 +571,10 @@
         <!-- Index Navigation -->
         <nav class="index-navigation">
             <div class="index-nav-container">
-                <a href="#about-me" class="index-nav-link">About</a>
+                <a href="#about-me" class="index-nav-link">About Me</a>
+                <a href="#skills" class="index-nav-link">Skills</a>
                 <a href="#professional-experience" class="index-nav-link">Experience</a>
                 <a href="#projects" class="index-nav-link">Projects</a>
-                <a href="#skills" class="index-nav-link">Skills</a>
             </div>
         </nav>
 
