--- a/portfolio.html
+++ b/portfolio.html
@@ -341,7 +341,7 @@
             /*font-family: 'Courier New', Courier, monospace;*/
             color: #2c3e50;
             white-space: nowrap;
-            overflow: hidden;
+            overflow:hidden;
             width: 0;
             animation: typing 2s steps(60) forwards, blink 0.75s step-end infinite;
             display: block;
@@ -596,9 +596,9 @@
         <section id="about-me" section class="section" style="margin-top: 0;">
             <h3 class="about-me-text">About Me</h3>
             <div class="typing-container">
-                <p class="typing-line">Master's student in Mechanical Engineering, focusing on dynamics and control systems.
-                I am proficient in hardware integration, PLC programming, robot path planning, stability analysis,
-                and dynamic system modeling.
+                <p class="typing-line">Master's student in Mechanical Engineering, focusing on dynamics and control systems.</p>
+                    <p class="typing-line">I am proficient in hardware integration, PLC programming, robot path planning, stability analysis,
+                    and dynamic system modeling.</p>
                 <p class="typing-line">My experience at Tioga Cardiovascular and Eaton has honed my skills in automation, design,
              and process engineering.</p>
             </div>
