--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sakshi Shah's Professional Portfolio</title>
+    <title>Sakshi Shah - Portfolio</title>
     <style>
         /* General Styles */
         body {
