--- a/portfolio.html
+++ b/portfolio.html
@@ -728,7 +728,7 @@
                             </div>
                         </li>
                         <li class="dropdown">
-                            <button>Controller Design</button>
+                            <button>Non Linear Controller Design</button>
                             <div class="dropdown-content">
                                 <p>Simulation and Design of Nonlinear Controllers for a Two-Link Robot Arm</p>
                                 <a href="ControllerSimulation.html" class="project-link" target="_blank">View Project</a>
@@ -747,7 +747,7 @@
                             </div>
                         </li>
                         <li class="dropdown">
-                            <button>Two-Pole Electro-Permanent Magnet Clamp </button>
+                            <button>Electro-Permanent Magnet Clamp </button>
                             <div class="dropdown-content">
                                 <p>Two-Pole Electro-Permanent Magnet Clamp for Workpiece Holding During Machining</p>
                                 <a href="ElectroPermanentMagneticClamp.html" class="project-link" target="_blank">View Project</a>
@@ -756,7 +756,7 @@
                             </div>
                         </li>
                         <li class="dropdown">
-                            <button>Design of State Feedback Controller </button>
+                            <button>State Feedback Controller </button>
                             <div class="dropdown-content">
                                 <p>Design of State Feedback Controller for Car Cruise Control</p>
                                 <a href="CarCruize.html" class="project-link" target="_blank">View Project</a>
