--- a/SpaceCraft_Dyn.html
+++ b/SpaceCraft_Dyn.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Sorting Line</title>
+    <title>Spacecraft Attitude Dynamics</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <style>
         /* Global Styles */
@@ -198,10 +198,7 @@
 
 
 
-        <!-- Image Gallery -->
-        <div class="image-container">
-            <img src="CarCruize_Simulink.png" alt="PLC Connections">
-        </div>
+        
     </div>
 
 </body>
