--- a/portfolio.html
+++ b/portfolio.html
@@ -125,7 +125,7 @@
             font-size: 1.3em;
             margin-bottom: 8px;
             color: #f0f4f8;
-            text-align: justify;
+            text-align: center;
         }
 
         .card p {
@@ -376,7 +376,7 @@
             padding: 20px; /* Adds spacing inside the section */
             border-radius: 10px; /* Rounded corners */
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
-            text-align: justify;
+            text-align: center;
         }    
 
         .typing-container {
@@ -384,6 +384,7 @@
             height: auto;
             display: block;
             margin-top: 10px;
+            text-align:center;
         }
 
         .typing-line {
@@ -394,7 +395,7 @@
             animation: typing 4s steps(60) forwards, blink 0.75s step-end infinite;
             display: block;
             margin-bottom: 0.1em;
-            text-align:start;
+            text-align:center;
         }
 
         /* Delay each line by its index - increased for better readability */
@@ -403,19 +404,19 @@
         }
 
         .typing-line:nth-child(2) {
-            animation-delay: 4s;
+            animation-delay: 3s;
         }
 
         .typing-line:nth-child(3) {
-            animation-delay: 8s;
+            animation-delay: 6s;
         }
         
         .typing-line:nth-child(4) {
-            animation-delay: 12s;
+            animation-delay: 9s;
         }
         
         .typing-line:nth-child(5) {
-            animation-delay: 16s;
+            animation-delay: 12s;
         }
 
         /* Animation for typing */
