--- a/ElectroPermanentMagneticClamp.html
+++ b/ElectroPermanentMagneticClamp.html
@@ -125,9 +125,9 @@
 
         <!-- Card for Technologies Used -->
         <div class="card">
-            <div class="card-title">Technologies Used:</div>
+            <div class="card-title">Software Used:</div>
             <div class="card-content">
-                MATLAB, OpenCV, GStreamer, ROS, Kinova Gen 3 Robot, Data-Driven Controllers
+                MATLAB, OctaveFEMM, ANSYS EDT
             </div>
         </div>
 
