--- a/portfolio.html
+++ b/portfolio.html
@@ -647,11 +647,10 @@
         <section id="about-me" class="section" style="margin-top: 0;">
             <h3 class="about-me-text">About Me</h3>
             <div class="typing-container">
-                <p class="typing-line">Master's student in Mechanical Engineering, focusing on dynamics and control systems.</p>
-                <p class="typing-line">I am proficient in hardware integration, PLC programming, robot path planning, stability analysis,
-                    and dynamic system modeling.</p>
-                <p class="typing-line">My experience at Tioga Cardiovascular and Eaton has honed my skills in automation, design,
-                    and process engineering.</p>
+                <p class="typing-line">I am a master's student in Mechanical Engineering, specializing in dynamics and control systems, with hands-on experience in 3D modeling,</p>
+                <p class="typing-line">  robot path planning, stability analysis, PLC programming, and hardware integration. My time at Eaton and Tioga Cardiovascular has strengthened </p>
+                <p class="typing-line">my expertise in continuous improvement, automation, design for manufacturing, prototyping, and process engineering. I am currently focussed on  </p>
+                <p class="typing-line">designing tooling and linkages, as well as developing control strategies and dynamic system models for real-world applications.</p>                
             </div>
         </section>
 
