--- a/portfolio.html
+++ b/portfolio.html
@@ -200,7 +200,7 @@
         }
 
         .dropdown-content ul {
-            list-style-type: square;
+            list-style-type:none;
             padding-left: 0;
             margin: 5px 0;
         }
@@ -392,7 +392,7 @@
             white-space: nowrap;
             overflow: hidden;
             width: 0;
-            animation: typing 4s steps(60) forwards, blink 0.75s step-end infinite;
+            animation: typing 2s steps(60) forwards, blink 0.25s step-end infinite;
             display: block;
             margin-bottom: 0.1em;
             text-align:center;
@@ -404,19 +404,19 @@
         }
 
         .typing-line:nth-child(2) {
-            animation-delay: 3s;
+            animation-delay: 2s;
         }
 
         .typing-line:nth-child(3) {
-            animation-delay: 6s;
+            animation-delay: 4s;
         }
         
         .typing-line:nth-child(4) {
-            animation-delay: 9s;
+            animation-delay: 6s;
         }
         
         .typing-line:nth-child(5) {
-            animation-delay: 12s;
+            animation-delay: 8s;
         }
 
         /* Animation for typing */
@@ -775,7 +775,7 @@
                             <div class="dropdown-content">
                                 <p>Visual Servo Control of a 7-link Kinova Gen3 Robot Arm</p>
                                 <a href="VisualServoControl.html" class="project-link" target="_blank">View Project</a>
-                                <p>MATLAB, OpenCV, GStreamer, ROS, Kinova Gen3 Robot</p>
+                                <p style="text-align: center;">MATLAB, Simulink, OpenCV, GStreamer, ROS, Kinova Gen3 Robot</p>
                                 <p>Joint space and Task space control, Trajectory Planning (PID,MPC), Numerical Optimization, Inverse Kinematics, Camera Caliberation, Image Processing</p>
                             </div>
                         </li>
@@ -784,7 +784,7 @@
                             <div class="dropdown-content">
                                 <p>Simulation and Design of Nonlinear Controllers for a Two-Link Robot Arm</p>
                                 <a href="ControllerSimulation.html" class="project-link" target="_blank">View Project</a>
-                                <p>Matlab, Simulink</p>
+                                <p style="text-align: center;">Matlab, Simulink</p>
                                 <p>Non-Linear Controler Design, Stability Analysis</p>
                             </div>
                         </li>
@@ -793,7 +793,7 @@
                             <div class="dropdown-content">
                                 <p>Remote Control and Monitoring of Conveyor System for Package Delivery</p>
                                 <a href="SmartSortingLine.html" class="project-link" target="_blank">View Project</a>
-                                <p>Python, HTML, GitHub Render, PostGreSQL, Connected Components Workbench, Factory I/O, VS Code, Datagrip, Allen-Bradley Micro 800.</p>
+                                <p style="text-align: center;">Python, HTML, GitHub Render, PostGreSQL, Connected Components Workbench, Factory I/O, VS Code, Datagrip, Allen-Bradley Micro 800.</p>
                                 <p>Communication Protocols, PLC Programming, Sensor and Actuator Integration, Digital Twin, Machine Learning, based data management, IOT, AI/ML in predictive maintainance, Cyber Physical Syatems</p>
                             </div>
                         </li>
@@ -802,7 +802,7 @@
                             <div class="dropdown-content">
                                 <p>Two-Pole Electro-Permanent Magnet Clamp for Workpiece Holding During Machining</p>
                                 <a href="ElectroPermanentMagneticClamp.html" class="project-link" target="_blank">View Project</a>
-                                <p>MATLAB, OctaveFEMM, ANSYS EDT</p>
+                                <p style="text-align: center;">MATLAB, OctaveFEMM, ANSYS EDT</p>
                                 <p>Magnetic Circuit Analysis, Eddy Current Breaking, Magnetostatics</p>
                             </div>
                         </li>
@@ -811,7 +811,7 @@
                             <div class="dropdown-content">
                                 <p>Design of State Feedback Controller for Car Cruise Control</p>
                                 <a href="CarCruize.html" class="project-link" target="_blank">View Project</a>
-                                <p>MATLAB, Simulink</p>
+                                <p style="text-align: center;">MATLAB, Simulink</p>
                                 <p>PID Controller Design, State Space Representation, Open and Closed Loop Transfer Function, Nyquist Diagram, Root Locus Staility Analysis, Controllability and Observability</p>
                             </div>
                         </li>
@@ -820,7 +820,7 @@
                             <div class="dropdown-content">
                                 <p>Modeling and Simulation of Spacecraft Attitude Dynamics</p>
                                 <a href="SpaceCraft_Dyn.html"class="project-link" target="_blank">View Project</a>
-                                <p>MATLAB</p>
+                                <p style="text-align: center;">MATLAB</p>
                                 <p>Euler Equations, Frame Transformations, ODE45</p>
                             </div>
                         </li>
@@ -829,7 +829,7 @@
                             <div class="dropdown-content">
                                 <p>Optimization of Discrete Choice Models and Multi-Spring Systems</p>
                                 <a href="EDO.html"class="project-link" target="_blank">View Project</a>
-                                <p>MATLAB</p>
+                                <p style="text-align: center;">MATLAB</p>
                                 <p>Latin Hypercube Sampling, Polynomial Metamodeling, Radial Basis Function (RBF), Cross-validation, Optimization</p>
                             </div>
                         </li>
